add_sources(GlobalHeaderList
   ABLForcingAlgorithm.h
   ABLProfileFunction.h
   Actuator.h
   ActuatorLinePointDrag.h
   AlgTraits.h
   Algorithm.h
   AlgorithmDriver.h
   AssembleContinuityEdgeOpenSolverAlgorithm.h
   AssembleContinuityEdgeSolverAlgorithm.h
   AssembleContinuityElemOpenSolverAlgorithm.h
   AssembleContinuityElemSolverAlgorithm.h
   AssembleContinuityInflowSolverAlgorithm.h
   AssembleContinuityNonConformalSolverAlgorithm.h
   AssembleCourantReynoldsElemAlgorithm.h
   AssembleElemSolverAlgorithm.h
   AssembleElemSolverAlgorithmHO.h
   AssembleFaceElemSolverAlgorithm.h
   AssembleHeatCondIrradWallSolverAlgorithm.h
   AssembleHeatCondWallSolverAlgorithm.h
   AssembleMomentumEdgeABLWallFunctionSolverAlgorithm.h
   AssembleMomentumEdgeOpenSolverAlgorithm.h
   AssembleMomentumEdgeSolverAlgorithm.h
   AssembleMomentumEdgeSymmetrySolverAlgorithm.h
   AssembleMomentumEdgeWallFunctionSolverAlgorithm.h
   AssembleMomentumElemABLWallFunctionSolverAlgorithm.h
   AssembleMomentumElemOpenSolverAlgorithm.h
   AssembleMomentumElemSolverAlgorithm.h
   AssembleMomentumElemSymmetrySolverAlgorithm.h
   AssembleMomentumElemWallFunctionSolverAlgorithm.h
   AssembleMomentumNonConformalSolverAlgorithm.h
   AssembleNodalGradAlgorithmDriver.h
   AssembleNodalGradBoundaryAlgorithm.h
   AssembleNodalGradPOpenBoundaryAlgorithm.h
   AssembleNodalGradEdgeAlgorithm.h
   AssembleNodalGradElemAlgorithm.h
   AssembleNodalGradNonConformalAlgorithm.h
   AssembleNodalGradPAlgorithmDriver.h
   AssembleNodalGradUAlgorithmDriver.h
   AssembleNodalGradUBoundaryAlgorithm.h
   AssembleNodalGradUEdgeAlgorithm.h
   AssembleNodalGradUElemAlgorithm.h
   AssembleNodalGradUNonConformalAlgorithm.h
   AssembleNodeSolverAlgorithm.h
   AssemblePNGBoundarySolverAlgorithm.h
   AssemblePNGElemSolverAlgorithm.h
   AssemblePNGNonConformalSolverAlgorithm.h
   AssembleScalarDiffNonConformalSolverAlgorithm.h
   AssembleScalarEdgeDiffSolverAlgorithm.h
   AssembleScalarEdgeOpenSolverAlgorithm.h
   AssembleScalarEdgeSolverAlgorithm.h
   AssembleScalarEigenEdgeSolverAlgorithm.h
   AssembleScalarElemDiffSolverAlgorithm.h
   AssembleScalarElemOpenSolverAlgorithm.h
   AssembleScalarElemSolverAlgorithm.h
   AssembleScalarFluxBCSolverAlgorithm.h
   AssembleScalarNonConformalSolverAlgorithm.h
   AssembleTemperatureNormalGradientBCSolverAlgorithm.h
   AssembleWallHeatTransferAlgorithmDriver.h
   AuxFunction.h
   AuxFunctionAlgorithm.h
   AveragingInfo.h
   BoundaryConditions.h
   BucketLoop.h
   BuildTemplates.h
   ComputeABLWallFrictionVelocityAlgorithm.h
   ComputeGeometryAlgorithmDriver.h
   ComputeGeometryBoundaryAlgorithm.h
   ComputeGeometryInteriorAlgorithm.h
   ComputeHeatTransferEdgeWallAlgorithm.h
   ComputeHeatTransferElemWallAlgorithm.h
   ComputeLowReynoldsSDRWallAlgorithm.h
   ComputeMdotAlgorithmDriver.h
   ComputeMdotEdgeAlgorithm.h
   ComputeMdotEdgeOpenAlgorithm.h
   ComputeMdotElemAlgorithm.h
   ComputeMdotElemOpenAlgorithm.h
   ComputeMdotElemOpenPenaltyAlgorithm.h
   ComputeMdotInflowAlgorithm.h
   ComputeMdotNonConformalAlgorithm.h
   ComputeSSTMaxLengthScaleElemAlgorithm.h
   ComputeTurbKineticEnergyWallFunctionAlgorithm.h
   ComputeWallFrictionVelocityAlgorithm.h
   ComputeWallModelSDRWallAlgorithm.h
   ConstantAuxFunction.h
   ContinuityGclNodeSuppAlg.h
   ContinuityLowSpeedCompressibleNodeSuppAlg.h
   ContinuityMassBDF2NodeSuppAlg.h
   ContinuityMassBackwardEulerNodeSuppAlg.h
   ContinuityMassElemSuppAlgDep.h
   CopyAndInterleave.h
   CopyFieldAlgorithm.h
   CoriolisSrc.h
   CVFEMTypeDefs.h
   DataProbePostProcessing.h
   DgInfo.h
   DirichletBC.h
   EffectiveDiffFluxCoeffAlgorithm.h
   EffectiveSSTDiffFluxCoeffAlgorithm.h
   EigenDecomposition.h
   ElemDataRequests.h
   ElemDataRequestsNGP.h
   EnthalpyABLSrcNodeSuppAlg.h
   EnthalpyEffectiveDiffFluxCoeffAlgorithm.h
   EnthalpyEquationSystem.h
   EnthalpyLowSpeedCompressibleNodeSuppAlg.h
   EnthalpyPmrSrcNodeSuppAlg.h
   EnthalpyPressureWorkNodeSuppAlg.h
   EnthalpyViscousWorkNodeSuppAlg.h
   EntityExposedFaceSorter.h
   Enums.h
   EquationSystem.h
   EquationSystems.h
   ErrorIndicatorAlgorithmDriver.h
   FORTRAN_Proto.h
   FieldFunctions.h
   FieldTypeDef.h
   FixPressureAtNodeAlgorithm.h
   FixPressureAtNodeInfo.h
   HeatCondEquationSystem.h
   HeatCondMassBDF2NodeSuppAlg.h
   HeatCondMassBackwardEulerNodeSuppAlg.h
   InitialConditions.h
   InputOutputRealm.h
   InterfaceBalancer.h
   KokkosInterface.h
   LimiterErrorIndicatorElemAlgorithm.h
   LinearSolver.h
   LinearSolverConfig.h
   LinearSolverTypes.h
   LinearSolvers.h
   LinearSystem.h
   LowMachEquationSystem.h
   MassFractionEquationSystem.h
   MaterialProperty.h
   MaterialPropertys.h
   MixtureFractionEquationSystem.h
   MomentumABLForceSrcNodeSuppAlg.h
   MomentumActuatorSrcNodeSuppAlg.h
   MomentumBodyForceSrcNodeSuppAlg.h
   MomentumBoussinesqRASrcNodeSuppAlg.h
   MomentumBoussinesqSrcNodeSuppAlg.h
   MomentumBuoyancySrcElemSuppAlgDep.h
   MomentumBuoyancySrcNodeSuppAlg.h
   MomentumCoriolisSrcNodeSuppAlg.h
   MomentumGclSrcNodeSuppAlg.h
   MomentumMassBDF2NodeSuppAlg.h
   MomentumMassBackwardEulerNodeSuppAlg.h
   MomentumMassElemSuppAlgDep.h
   MovingAveragePostProcessor.h
   NaluEnv.h
   NaluParsing.h
   NaluParsingHelper.h
   NonConformalInfo.h
   NonConformalManager.h
   OutputInfo.h
   PecletFunction.h
   PeriodicManager.h
   PostProcessingData.h
   PostProcessingInfo.h
   ProjectedNodalGradientEquationSystem.h
   PstabErrorIndicatorEdgeAlgorithm.h
   PstabErrorIndicatorElemAlgorithm.h
   Realm.h
   Realms.h
   ScalarGclNodeSuppAlg.h
   ScalarMassBDF2NodeSuppAlg.h
   ScalarMassBackwardEulerNodeSuppAlg.h
   ScalarMassElemSuppAlgDep.h
   ScratchViews.h
   ScratchViewsHO.h
   SharedMemData.h
   ShearStressTransportEquationSystem.h
   SimdInterface.h
   SimpleErrorIndicatorElemAlgorithm.h
   SimpleErrorIndicatorScalarElemAlgorithm.h
   Simulation.h
   SolutionNormPostProcessing.h
   SolutionOptions.h
   SolverAlgorithm.h
   SolverAlgorithmDriver.h
   SpecificDissipationRateEquationSystem.h
   SpecificDissipationRateSSTNodeSourceSuppAlg.h
   SupplementalAlgorithm.h
   SurfaceForceAndMomentAlgorithm.h
   SurfaceForceAndMomentAlgorithmDriver.h
   SurfaceForceAndMomentWallFunctionAlgorithm.h
   TimeIntegrator.h
   TpetraLinearSystem.h
   TurbKineticEnergyEquationSystem.h
   TurbKineticEnergyKsgsBuoyantElemSuppAlg.h
   TurbKineticEnergyKsgsNodeSourceSuppAlg.h
   TurbKineticEnergyRodiNodeSourceSuppAlg.h
   TurbKineticEnergySSTDESNodeSourceSuppAlg.h
   TurbKineticEnergySSTNodeSourceSuppAlg.h
   TurbViscKsgsAlgorithm.h
   TurbViscSSTAlgorithm.h
   TurbViscSmagorinskyAlgorithm.h
   TurbViscWaleAlgorithm.h
   TurbulenceAveragingPostProcessing.h
   UnitTests.h
   nalu_make_unique.h
)

if(ENABLE_OPENFAST)
   add_sources(GlobalHeaderList
   	  ActuatorFAST.h
      ActuatorLineFAST.h
      ActuatorDiskFAST.h
   )
endif()

if(ENABLE_HYPRE)
   add_sources(GlobalHeaderList
      HypreDirectSolver.h
      HypreLinearSystem.h
      XSDKHypreInterface.h
   )
endif()

if(ENABLE_PARAVIEW_CATALYST)
   add_sources(GlobalHeaderList
      Adapter.h
   )
endif()

add_subdirectory(element_promotion)
add_subdirectory(kernel)
add_subdirectory(master_element)
add_subdirectory(mesh_motion)
add_subdirectory(nso)
add_subdirectory(overset)
add_subdirectory(pmr)
add_subdirectory(property_evaluator)
add_subdirectory(tabular_props)
add_subdirectory(user_functions)
add_subdirectory(utils)
add_subdirectory(xfer)
