add_sources(GlobalSourceList
   ABLProfileFunction.C
   ActuatorLinePointDrag.C
   Actuator.C
   Algorithm.C
   AlgorithmDriver.C
   AssembleContinuityEdgeOpenSolverAlgorithm.C
   AssembleContinuityEdgeSolverAlgorithm.C
   AssembleContinuityElemOpenSolverAlgorithm.C
   AssembleContinuityElemSolverAlgorithm.C
   AssembleContinuityInflowSolverAlgorithm.C
   AssembleContinuityNonConformalSolverAlgorithm.C
   AssembleCourantReynoldsElemAlgorithm.C
   AssembleElemSolverAlgorithm.C
   AssembleElemSolverAlgorithmHO.C
   AssembleFaceElemSolverAlgorithm.C
   AssembleHeatCondIrradWallSolverAlgorithm.C
   AssembleHeatCondWallSolverAlgorithm.C
   AssembleMomentumEdgeABLWallFunctionSolverAlgorithm.C
   AssembleMomentumEdgeOpenSolverAlgorithm.C
   AssembleMomentumEdgeSolverAlgorithm.C
   AssembleMomentumEdgeSymmetrySolverAlgorithm.C
   AssembleMomentumEdgeWallFunctionSolverAlgoirthm.C
   AssembleMomentumElemABLWallFunctionSolverAlgorithm.C
   AssembleMomentumElemOpenSolverAlgorithm.C
   AssembleMomentumElemSolverAlgorithm.C
   AssembleMomentumElemSymmetrySolverAlgorithm.C
   AssembleMomentumElemWallFunctionSolverAlgoirthm.C
   AssembleMomentumNonConformalSolverAlgorithm.C
   AssembleNodalGradAlgorithmDriver.C
   AssembleNodalGradBoundaryAlgorithm.C
   AssembleNodalGradPOpenBoundaryAlgorithm.C
   AssembleNodalGradEdgeAlgorithm.C
   AssembleNodalGradElemAlgorithm.C
   AssembleNodalGradNonConformalAlgorithm.C
   AssembleNodalGradPAlgorithmDriver.C
   AssembleNodalGradUAlgorithmDriver.C
   AssembleNodalGradUBoundaryAlgorithm.C
   AssembleNodalGradUEdgeAlgorithm.C
   AssembleNodalGradUElemAlgorithm.C
   AssembleNodalGradUNonConformalAlgorithm.C
   AssembleNodeSolverAlgorithm.C
   AssemblePNGBoundarySolverAlgorithm.C
   AssemblePNGElemSolverAlgorithm.C
   AssemblePNGNonConformalSolverAlgorithm.C
   AssembleScalarDiffNonConformalSolverAlgorithm.C
   AssembleScalarEdgeDiffSolverAlgorithm.C
   AssembleScalarEdgeOpenSolverAlgorithm.C
   AssembleScalarEdgeSolverAlgorithm.C
   AssembleScalarEigenEdgeSolverAlgorithm.C
   AssembleScalarElemDiffSolverAlgorithm.C
   AssembleScalarElemOpenSolverAlgorithm.C
   AssembleScalarElemSolverAlgorithm.C
   AssembleScalarFluxBCSolverAlgorithm.C
   AssembleScalarNonConformalSolverAlgorithm.C
   AssembleTemperatureNormalGradientBCSolverAlgorithm.C
   AssembleWallHeatTransferAlgorithmDriver.C
   AuxFunctionAlgorithm.C
   AveragingInfo.C
   BoundaryConditions.C
   ComputeABLWallFrictionVelocityAlgorithm.C
   ComputeGeometryAlgorithmDriver.C
   ComputeGeometryBoundaryAlgorithm.C
   ComputeGeometryInteriorAlgorithm.C
   ComputeHeatTransferEdgeWallAlgorithm.C
   ComputeHeatTransferElemWallAlgorithm.C
   ComputeLowReynoldsSDRWallAlgorithm.C
   ComputeMdotAlgorithmDriver.C
   ComputeMdotEdgeAlgorithm.C
   ComputeMdotEdgeOpenAlgorithm.C
   ComputeMdotElemAlgorithm.C
   ComputeMdotElemOpenAlgorithm.C
   ComputeMdotElemOpenPenaltyAlgorithm.C
   ComputeMdotInflowAlgorithm.C
   ComputeMdotNonConformalAlgorithm.C
   ComputeSSTMaxLengthScaleElemAlgorithm.C
   ComputeTurbKineticEnergyWallFunctionAlgorithm.C
   ComputeWallFrictionVelocityAlgorithm.C
   ComputeWallModelSDRWallAlgorithm.C
   ConstantAuxFunction.C
   ContinuityGclNodeSuppAlg.C
   ContinuityLowSpeedCompressibleNodeSuppAlg.C
   ContinuityMassBDF2NodeSuppAlg.C
   ContinuityMassBackwardEulerNodeSuppAlg.C
   ContinuityMassElemSuppAlgDep.C
   CopyFieldAlgorithm.C
   CoriolisSrc.C
   DataProbePostProcessing.C
   DgInfo.C
   DirichletBC.C
   EffectiveDiffFluxCoeffAlgorithm.C
   EffectiveSSTDiffFluxCoeffAlgorithm.C
   ElemDataRequests.C
   EnthalpyABLSrcNodeSuppAlg.C
   EnthalpyEffectiveDiffFluxCoeffAlgorithm.C
   EnthalpyEquationSystem.C
   EnthalpyLowSpeedCompressibleNodeSuppAlg.C
   EnthalpyPmrSrcNodeSuppAlg.C
   EnthalpyPressureWorkNodeSuppAlg.C
   EnthalpyViscousWorkNodeSuppAlg.C
   EquationSystem.C
   EquationSystems.C
   ErrorIndicatorAlgorithmDriver.C
   FieldFunctions.C
   FixPressureAtNodeAlgorithm.C
   HeatCondEquationSystem.C
   HeatCondMassBDF2NodeSuppAlg.C
   HeatCondMassBackwardEulerNodeSuppAlg.C
   InitialConditions.C
   InputOutputRealm.C
   InterfaceBalancer.C
   LimiterErrorIndicatorElemAlgorithm.C
   LinearSolver.C
   LinearSolverConfig.C
   LinearSolvers.C
   LinearSystem.C
   LowMachEquationSystem.C
   MassFractionEquationSystem.C
   MaterialProperty.C
   MaterialPropertys.C
   MixtureFractionEquationSystem.C
   MomentumABLForceSrcNodeSuppAlg.C
   MomentumActuatorSrcNodeSuppAlg.C
   MomentumBodyForceSrcNodeSuppAlg.C
   MomentumBoussinesqRASrcNodeSuppAlg.C
   MomentumBoussinesqSrcNodeSuppAlg.C
   MomentumBuoyancySrcElemSuppAlgDep.C
   MomentumBuoyancySrcNodeSuppAlg.C
   MomentumCoriolisSrcNodeSuppAlg.C
   MomentumGclSrcNodeSuppAlg.C
   MomentumMassBDF2NodeSuppAlg.C
   MomentumMassBackwardEulerNodeSuppAlg.C
   MomentumMassElemSuppAlgDep.C
   MovingAveragePostProcessor.C
   NaluEnv.C
   NaluParsing.C
   NonConformalInfo.C
   NonConformalManager.C
   OutputInfo.C
   PecletFunction.C
   PeriodicManager.C
   PostProcessingInfo.C
   ProjectedNodalGradientEquationSystem.C
   PstabErrorIndicatorEdgeAlgorithm.C
   PstabErrorIndicatorElemAlgorithm.C
   Realm.C
   Realms.C
   ScalarGclNodeSuppAlg.C
   ScalarMassBDF2NodeSuppAlg.C
   ScalarMassBackwardEulerNodeSuppAlg.C
   ScalarMassElemSuppAlgDep.C
   ScratchViews.C
   ShearStressTransportEquationSystem.C
   SimpleErrorIndicatorElemAlgorithm.C
   SimpleErrorIndicatorScalarElemAlgorithm.C
   Simulation.C
   SolutionNormPostProcessing.C
   SolutionOptions.C
   SolverAlgorithm.C
   SolverAlgorithmDriver.C
   SpecificDissipationRateEquationSystem.C
   SpecificDissipationRateSSTNodeSourceSuppAlg.C
   SupplementalAlgorithm.C
   SurfaceForceAndMomentAlgorithm.C
   SurfaceForceAndMomentAlgorithmDriver.C
   SurfaceForceAndMomentWallFunctionAlgorithm.C
   TimeIntegrator.C
   TpetraLinearSystem.C
   TurbKineticEnergyEquationSystem.C
   TurbKineticEnergyKsgsBuoyantElemSuppAlg.C
   TurbKineticEnergyKsgsNodeSourceSuppAlg.C
   TurbKineticEnergyRodiNodeSourceSuppAlg.C
   TurbKineticEnergySSTDESNodeSourceSuppAlg.C
   TurbKineticEnergySSTNodeSourceSuppAlg.C
   TurbViscKsgsAlgorithm.C
   TurbViscSSTAlgorithm.C
   TurbViscSmagorinskyAlgorithm.C
   TurbViscWaleAlgorithm.C
   TurbulenceAveragingPostProcessing.C
   AssembleWallDistEdgeSolverAlgorithm.C
   AssembleWallDistNonConformalAlgorithm.C
   WallDistEquationSystem.C
   WallDistSrcNodeSuppAlg.C
   UnitTests.C
)

if(ENABLE_FFTW)
   add_sources(GlobalSourceList
      AssembleMomentumEdgeABLTopBC.C
   )
endif()

if(ENABLE_OPENFAST)
   add_sources(GlobalSourceList
      ActuatorFAST.C
      ActuatorLineFAST.C
      ActuatorDiskFAST.C
   )
endif()

if(ENABLE_HYPRE)
   add_sources(GlobalSourceList
      HypreDirectSolver.C
      HypreUVWSolver.C
      HypreLinearSolverConfig.C
      HypreLinearSystem.C
      HypreUVWLinearSystem.C
   )
endif()

if(ENABLE_PARAVIEW_CATALYST)
   add_sources(GlobalSourceList
      Adapter.C
   )
endif()

add_subdirectory(element_promotion)
add_subdirectory(kernel)
add_subdirectory(master_element)
add_subdirectory(mesh_motion)
add_subdirectory(nso)
add_subdirectory(overset)
add_subdirectory(pmr)
add_subdirectory(property_evaluator)
add_subdirectory(tabular_props)
add_subdirectory(utils)
add_subdirectory(user_functions)
add_subdirectory(xfer)
add_subdirectory(wind_energy)
